tests/ui/associated-item/missing-associated_item_or_field_def_ids.stderr
error[E0404]: expected trait, found associated function `Iterator::advance_by`
  --> $DIR/missing-associated_item_or_field_def_ids.rs:3:30
   |
LL | fn main() -> dyn Iterator + ?Iterator::advance_by(usize) {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a trait

error: relaxed bounds are not permitted in trait object types
  --> $DIR/missing-associated_item_or_field_def_ids.rs:3:29
   |
LL | fn main() -> dyn Iterator + ?Iterator::advance_by(usize) {
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0404`.
